Switch to GCloud Functions

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,4 @@
-### Ignore generated Functions Folder ###
-#
-# We are using the functionsES6 folder to code and translating at deploy time, so ignore the generated code folder
-#
-/functions
-
-# production
-/build
-
+lib/
 
 # Created by https://www.gitignore.io/api/node,linux,macos
 
