--- a/package.json
+++ b/package.json
@@ -12,15 +12,27 @@
     "url": "https://github.com/grahamar/irishrail-google-action/issues"
   },
   "homepage": "https://github.com/grahamar/irishrail-google-action",
+  "main": "lib/index.js",
+  "scripts": {
+    "build": "rimraf lib && `yarn bin`/babel --source-maps --out-dir lib src",
+    "deploy": "yarn build && gcloud beta functions deploy nextDart --entry-point handler --stage-bucket irishrail-action-function --trigger-http --memory=256MB"
+  },
   "devDependencies": {
+    "@google-cloud/nodejs-repo-tools": "1.4.17",
     "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
     "rimraf": "^2.6.1"
   },
-  "scripts": {
-    "prepackage-functions": "rimraf functions",
-    "package-functions": "babel 'functionsES6' --out-dir 'functions' --presets=es2015 --copy-files --ignore 'node_modules'",
-    "postpackage-functions": "cd functions && yarn",
-    "deploy": "yarn run package-functions && firebase deploy"
+  "dependencies": {
+    "actions-on-google": "^1.2.1",
+    "babel-runtime": "^6.23.0",
+    "irishrail-client": "^1.0.2"
+  },
+  "cloud-repo-tools": {
+    "requiresKeyFile": true,
+    "requiresProjectId": true
   }
 }
