--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "@google-cloud/datastore": "^1.1.0",
     "actions-on-google": "^1.2.1",
     "babel-runtime": "^6.23.0",
-    "irishrail-client": "^1.0.2"
+    "irishrail-client": "^1.0.2",
+    "lodash": "^4.17.4"
   },
   "cloud-repo-tools": {
     "requiresKeyFile": true,
